exports[`User not next to act without the dealer button with a hand of two face-down cards receiving no chips betting chips holding chips works 1`] = `
<ol
  className="player user">
  <li
    className="outer_player_information">
    <div
      className="contribution">
      <div
        className="chip-stack">
        <div
          className="amount">
          100
        </div>
      </div>
    </div>
  </li>
  <li
    className="held_player_information">
    <div
      className="name">
      player1
    </div>
    <ol
      className="card-list">
      <li>
        <div
          className="card">
          <div
            className="logo" />
        </div>
      </li>
      <li>
        <div
          className="card">
          <div
            className="logo" />
        </div>
      </li>
    </ol>
    <div
      className="player_stack">
      <div
        className="chip-stack">
        <div
          className="amount">
          9001
        </div>
      </div>
    </div>
  </li>
</ol>
`;

exports[`User not next to act without the dealer button with a hand of two face-down cards receiving no chips betting chips holding no chips works 1`] = `
<ol
  className="player user">
  <li
    className="outer_player_information">
    <div
      className="contribution">
      <div
        className="chip-stack">
        <div
          className="amount">
          100
        </div>
      </div>
    </div>
  </li>
  <li
    className="held_player_information">
    <div
      className="name">
      player1
    </div>
    <ol
      className="card-list">
      <li>
        <div
          className="card">
          <div
            className="logo" />
        </div>
      </li>
      <li>
        <div
          className="card">
          <div
            className="logo" />
        </div>
      </li>
    </ol>
    <div
      className="player_stack" />
  </li>
</ol>
`;

exports[`User not next to act without the dealer button with a hand of two face-down cards receiving no chips betting no chips holding chips works 1`] = `
<ol
  className="player user">
  <li
    className="outer_player_information">
    <div
      className="chip-stack-placeholder" />
  </li>
  <li
    className="held_player_information">
    <div
      className="name">
      player1
    </div>
    <ol
      className="card-list">
      <li>
        <div
          className="card">
          <div
            className="logo" />
        </div>
      </li>
      <li>
        <div
          className="card">
          <div
            className="logo" />
        </div>
      </li>
    </ol>
    <div
      className="player_stack">
      <div
        className="chip-stack">
        <div
          className="amount">
          9001
        </div>
      </div>
    </div>
  </li>
</ol>
`;

exports[`User not next to act without the dealer button with a hand of two face-down cards receiving no chips betting no chips holding no chips works 1`] = `
<ol
  className="player user">
  <li
    className="outer_player_information">
    <div
      className="chip-stack-placeholder" />
  </li>
  <li
    className="held_player_information">
    <div
      className="name">
      player1
    </div>
    <ol
      className="card-list">
      <li>
        <div
          className="card">
          <div
            className="logo" />
        </div>
      </li>
      <li>
        <div
          className="card">
          <div
            className="logo" />
        </div>
      </li>
    </ol>
    <div
      className="player_stack" />
  </li>
</ol>
`;
